--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
-    "@types/node": "^20",
+    "@types/node": "^20.16.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
