--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.5.3",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "@prisma/client": "^5.20.0",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
+    "prisma": "^5.20.0",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.26.2"
