--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.20.0",
+    "bcrypt": "^5.1.1",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
     "prisma": "^5.20.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^20.16.10",
     "@types/react": "^18",
