--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/bcrypt": "^5.0.2",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^20.16.10",
     "@types/react": "^18",
