--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@auth/prisma-adapter": "^2.5.3",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.20.0",
     "bcrypt": "^5.1.1",
+    "install": "^0.13.0",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
+    "npm": "^10.9.0",
     "prisma": "^5.20.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
     "zod": "^3.23.8"
   },
