--- a/package.json
+++ b/package.json
@@ -14,8 +14,16 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "install": "^0.13.0",
+    "lucide-react": "^0.453.0",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
     "npm": "^10.9.0",
@@ -24,6 +32,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -33,14 +43,13 @@
     "@types/node": "^20.16.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "daisyui": "^4.12.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5"
   }
 }
