--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "npm": "^10.9.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^3.0.4",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
+    "resend": "^4.0.1",
     "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
