--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "copy .env .\\node_modules\\react-email && email dev --dir src\\email --port 3001"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.3",
@@ -19,6 +20,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "^0.0.31",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.3.0",
     "autoprefixer": "^10.4.20",
@@ -27,7 +29,7 @@
     "clsx": "^2.1.1",
     "install": "^0.13.0",
     "lucide-react": "^0.453.0",
-    "next": "14.2.13",
+    "next": "^14.2.20",
     "next-auth": "^4.24.7",
     "npm": "^10.9.0",
     "react": "^18",
